--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,11 @@
         android:id="@+id/arrowToOverflow4"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="100dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.91"
         app:layout_constraintStart_toEndOf="@+id/arrowToOverflow3"
         app:layout_constraintTop_toBottomOf="@+id/arrowToOverflow2"
         app:srcCompat="@drawable/avd_arrow_to_overflow"
@@ -62,7 +61,6 @@
         android:id="@+id/arrowToOverflow2"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:scaleType="fitXY"
@@ -80,6 +78,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:checked="false"
         android:text="SlowMo"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
